--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,16 @@
 
     <meta property="article:published_time" content="{{ page.date }}">
     <meta property="article:modified_time" content="{{ page.date }}">
+
+    <script type="text/javascript" async src="https://www.google-analytics.com/analytics.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123461447-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-123461447-1', { 'anonymize_ip': true });
+    </script>
 </head>
 
 <body>
