--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,10 +37,13 @@ layout: default
     </div>
     <div class="row">
         <div class="col-12">
-            <script type="text/javascript" src="//contextual.media.net/nmedianet.js?cid=8CU725383">medianet_width = "728";
+            <script id="mNCC" language="javascript">
+                medianet_width = "728";
                 medianet_height = "90";
                 medianet_crid = "825343823";
-                medianet_versionId = "3111299";</script>
+                medianet_versionId = "3111299"; 
+              </script>
+            <script src="//contextual.media.net/nmedianet.js?cid=8CU725383"></script>
         </div>
     </div>
     <div class="row">
