--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,7 +35,7 @@ layout: default
             <hr>
         </div>
     </div>
-    <div class="row">
+    <div class="row mb-2">
         <div class="col-12">
             <script id="mNCC" language="javascript">
                 medianet_width = "728";
